--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
         <!-- <meta http-equiv="refresh" content="5; url=http://www.yourdomain.com/yoursite.html"> -->
 
-        <script src="../js/index.js"></script>
+        <script src="/index.js"></script>
         <!-- <link rel="stylesheet" href="../css/index.css" type="text/css"> -->
         
     </head>
