--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,11 @@
                     <input type="radio" id="week" name="freq" value="week">
                     <label for="week">1 week</label>
 
+                    <!-- <input type="datetime-local" id="startday" name="startday" value="startday">
+                    <label for="day">Start day and time</label>
+                    <input type="datetime-local" id="endday" name="endday" value="endday">
+                    <label for="week">End day and time</label> -->
+
                     <button onclick="updateGraph()">Перерисовать</button>
                 </div>
 
